Bug 186016 - ICQ-Chat History is displayed in wrong order, if the computer-date is incorrect
Summary: ICQ-Chat History is displayed in wrong order, if the computer-date is incorrect
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: History Plugin (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Unspecified
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-03 09:30 UTC by Alex
Modified: 2010-07-06 18:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
History time issues in kopete (930.50 KB, image/png)
2010-06-28 15:46 UTC, alexander.julo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex 2009-03-03 09:30:13 UTC
Version:            (using KDE 4.2.0)
Installed from:    Debian testing/unstable Packages

If the computer date is incorrect (i.e. off by -30 seconds), the history plugin displays the conversations in wrong order. So i see the response to my line in history before my own line.

It seems, the date of the incoming lines is taken from the ICQ-Protocol and the date of the outgoing lines is from the local computer?

It should be possible to fix old logs (automatically in the next release?), because the order in the .xml-file is correct, only the time="..." attribute is wrong by 30 seconds for my own lines.
Comment 1 Tobiáš Potoček 2010-02-28 10:29:20 UTC
Version: (using KDE 4.3.1)
Installed from: openSuse KDE repositories

I can confirm that, it is very unpleasant. I am not sure whether it is exactly 30 seconds but it is definitely in wrong order. Only solution is to export manually the log with some XSLT template.
Comment 2 alexander.julo 2010-06-28 15:46:17 UTC
Created attachment 48420 [details]
History time issues in kopete

I can confirm this bug, i am using kde 4.4.85 on an 64-bit archlinux, and have the same issue.

You can see it on the attached screenshot
Comment 3 Roman Jarosz 2010-07-06 18:04:40 UTC
SVN commit 1146770 by rjarosz:

Fix bug ICQ-Chat History is displayed in wrong order, if the computer-date is incorrect.

BUG: 186016
BUG: 212392



 M  +23 -1     historylogger.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1146770
Comment 4 Roman Jarosz 2010-07-06 18:08:23 UTC
SVN commit 1146774 by rjarosz:

Backport commit 1146770.
Fix bug ICQ-Chat History is displayed in wrong order, if the computer-date is incorrect.
 
CCBUG: 186016
CCBUG: 212392


 M  +23 -1     historylogger.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1146774