Fix bug ICQ-Chat History is displayed in wrong order, if the computer-date is incorrect.

BUG: 186016
BUG: 212392


svn path=/trunk/KDE/kdenetwork/kopete/; revision=1146770